crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_board_narrow_terminal.snap
---
source: crates/whip-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭Backlog (2)───┬In Progress (1┬Under Review (┬Done (2)─────╮
│┌────────────┐│┌────────────┐│┌────────────┐│┌───────────┐│
││Design UI   │││Implement   │││Code review:│││Setup CI/CD││
││mockups     │││parser      │││auth        │││Configur...││
│└────────────┘│└────────────┘│└────────────┘│└───────────┘│
│┌────────────┐│              │              │┌───────────┐│
││Write specs ││              │              ││Fix login  ││
││Document ...││              │              ││bug        ││
│└────────────┘│              │              │└───────────┘│
│              │              │              │             │
│              │              │              │             │
│              │              │              │             │
│              │              │              │             │
│              │              │              │             │
╰──────────────┴──────────────┴──────────────┴─────────────╯
