crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_board_with_tasks.snap
---
source: crates/whip-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭Backlog (2)─────────────┬In Progress (1)─────────┬Under Review (1)────────┬Done (2)───────────────╮
│┌──────────────────────┐│┌──────────────────────┐│┌──────────────────────┐│┌─────────────────────┐│
││Design UI mockups     │││Implement parser      │││Code review: auth     │││Setup CI/CD          ││
││Create wireframes f...│││Build JSON parser m...│││Review authenticati...│││Configure GitHub A...││
│└──────────────────────┘│└──────────────────────┘│└──────────────────────┘│└─────────────────────┘│
│┌──────────────────────┐│                        │                        │┌─────────────────────┐│
││Write specs           ││                        │                        ││Fix login bug        ││
││Document requirements ││                        │                        ││Users couldn't log in││
│└──────────────────────┘│                        │                        │└─────────────────────┘│
│                        │                        │                        │                       │
│                        │                        │                        │                       │
│                        │                        │                        │                       │
│                        │                        │                        │                       │
│                        │                        │                        │                       │
│                        │                        │                        │                       │
│                        │                        │                        │                       │
│                        │                        │                        │                       │
│                        │                        │                        │                       │
│                        │                        │                        │                       │
│                        │                        │                        │                       │
│                        │                        │                        │                       │
│                        │                        │                        │                       │
│                        │                        │                        │                       │
╰────────────────────────┴────────────────────────┴────────────────────────┴───────────────────────╯
