crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_detail_panel_idle.snap
---
source: crates/whip-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭ Idle Task ───────────────────────────╮
│Lane: Backlog  │  ○ Idle              │
│Created: 2025-01-15 10:30             │
│Updated: 2025-01-15 10:30             │
│──────────────────────────────────────│
│This task is waiting to be started. It│
│has a longer description to test text │
│wrapping in the detail panel.         │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│──────────────────────────────────────│
│[Esc] Back to board  [↑↓] Scroll      │
╰──────────────────────────────────────╯
