crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_detail_panel_medium_width.snap
---
source: crates/whip-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭ Medium Width Task ───────────────────────────────────────────────────────────╮
│Lane: In Progress          │  ● In Progress                                   │
│Created: 2025-01-15 10:30  │  Updated: 2025-01-15 10:30                       │
│──────────────────────────────────────────────────────────────────────────────│
│Testing the medium width layout.                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│──────────────────────────────────────────────────────────────────────────────│
│[Esc] Back to board  [↑↓] Scroll                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
