crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_detail_panel_needs_attention.snap
---
source: crates/whip-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭ Blocked Task ────────────────────────╮
│Lane: In Progress  │  ◆ Needs Attentio│
│Created: 2025-01-15 10:30             │
│Updated: 2025-01-15 10:30             │
│──────────────────────────────────────│
│Waiting for input from the product    │
│manager.                              │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│──────────────────────────────────────│
│[Esc] Back to board  [↑↓] Scroll      │
╰──────────────────────────────────────╯
