crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_detail_panel_wide.snap
---
source: crates/whip-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭ Wide Screen Task ────────────────────────────────────────────────────────────────────────────────╮
│Lane: Done  │  ✓ Success  │  Created: 2025-01-15 10:30  │  Updated: 2025-01-15 10:30              │
│──────────────────────────────────────────────────────────────────────────────────────────────────│
│Testing the wide layout.                                                                          │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│──────────────────────────────────────────────────────────────────────────────────────────────────│
│[Esc] Back to board  [↑↓] Scroll                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
