crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_detail_panel_with_scroll.snap
---
source: crates/whip-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭ Long Description Task ───────────────╮
│Lane: In Progress  │  ● In Progress   │
│Created: 2025-01-15 10:30             │
│Updated: 2025-01-15 10:30             │
│──────────────────────────────────────│
│sentences to ensure we have enough    │
│content. The detail panel should      │
│handle this gracefully by allowing the│
│user to scroll.                       │
│                                      │
│                                      │
│                                      │
│──────────────────────────────────────│
│[Esc] Back to board  [↑↓] Scroll      │
╰──────────────────────────────────────╯
